Completed and combined horizontal/vertical flip, forward and backward.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>A collections of sliders.</h1>
-    <section class="slider slider-flip-vert">
+    <section class="slider slider-flip" data-direction="vertical">
         <h2>Vertical flip.</h2>
         <div class="slider-window">
             <img src="img/chris-lawton-217895.jpg" alt="Squirrel number one" class="slider-img" id="squirrel1">
@@ -15,9 +15,10 @@
             <img src="img/ilnur-kalimullin-117524.jpg" alt="squirrel number three" class="slider-img">
             <img src="img/remi-skatulski-101224.jpg" alt="squirrel number four" class="slider-img">
         </div>
-        <button id="btn1" class="btn-flip">Klik Me</button>
+        <button id="btn1" class="btn-backward">Back</button>
+        <button id="btn2" class="btn-forward">Forward</button>
     </section>
-    <section class="slider slider-flip-horiz">
+    <section class="slider slider-flip" data-direction="horizontal">
         <h2>Horizontal flip.</h2>
         <div class="slider-window">
             <img src="img/chris-lawton-217895.jpg" alt="Squirrel number one" class="slider-img" id="squirrel1">
@@ -25,7 +26,8 @@
             <img src="img/ilnur-kalimullin-117524.jpg" alt="squirrel number three" class="slider-img">
             <img src="img/remi-skatulski-101224.jpg" alt="squirrel number four" class="slider-img">
         </div>
-        <button id="btn2" class="btn-flip">Klik Me</button>        
+        <button id="btn3" class="btn-backward">Back</button>        
+        <button id="btn4" class="btn-forward">Forward</button>
     </section>
 </body>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
